--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "apollo-server-express": "^2.14.3",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "crypto-js": "^4.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.6.0",
@@ -33,7 +34,8 @@
   },
   "scripts": {
     "build": "tsc -w",
-    "dev": "nodemon build/index.js"
+    "dev": "nodemon build/index.js",
+    "prod": "forever start build/index.js"
   },
   "author": "",
   "license": "ISC"
